# spark-bridge-backend

./: .dockerignore  .gitignore  Bitcoin Blockchain Indexer API Collection.json  Bitcoin Mempool Monitoring API.json  Bitcoin Node RPC API Collection (1).json  Cargo.toml  Dockerfile  INTEGRATION_GUIDE.md  Makefile  Readme.md  ca.pem  docker-compose.yml  example.env  railway.yml  rustfmt.toml
apps/server_helper/: Cargo.toml
apps/server_helper/src/: error.rs  lib.rs
btc_indexer/apps/main/: Cargo.toml
btc_indexer/apps/main/src/: main.rs
btc_indexer/crates/api/: Cargo.toml
btc_indexer/crates/api/src/: api.rs
btc_indexer/crates/indexer/: Cargo.toml
btc_indexer/crates/indexer/src/: callback_client.rs  error.rs  indexer.rs  lib.rs  tx_indexer.rs
btc_indexer/crates/indexer_client/: Cargo.toml
btc_indexer/crates/indexer_client/src/: client_api.rs  error.rs  lib.rs
btc_indexer/crates/indexer_internals/: Cargo.toml
btc_indexer/crates/indexer_internals/src/: api.rs  error.rs  indexer.rs  lib.rs  maestro_client.rs  tx_arbiter.rs  tx_tracking_task.rs
btc_indexer/crates/indexer_internals/tests/: mock_testing.rs
btc_indexer/crates/local_db_store/: Cargo.toml
btc_indexer/crates/local_db_store/fixtures/: btc_indexer_work_checkpoints.sql
btc_indexer/crates/local_db_store/migrations/: 20250814104651_initial.down.sql  20250814104651_initial.up.sql  20251008143609_init.down.sql  20251008143609_init.up.sql
btc_indexer/crates/local_db_store/src/: init.rs  lib.rs  storage.rs
btc_indexer/crates/local_db_store/tests/: btc_indexer_requests.rs  init_tests.rs  user_requests_tests.rs  utils.rs
btc_indexer/crates/server/: Cargo.toml
btc_indexer/crates/server/src/: common.rs  error.rs  init.rs  lib.rs  routes.rs
btc_indexer/crates/server/tests/: test_healthcheck.rs  test_tx_tracking.rs  test_wallet_tracking.rs
btc_verifier/crates/btc_indexer/: Cargo.toml
btc_verifier/crates/btc_indexer/src/: api.rs  error.rs  indexer.rs
crates/bitcoin_rpc_client/: Cargo.toml
crates/bitcoin_rpc_client/src/: lib.rs
crates/btc_aggregator/: Cargo.toml
crates/btc_aggregator/src/: agg_trait.rs  aggregator.rs  config.rs  errors.rs  lib.rs  session.rs  traits.rs
crates/btc_aggregator/tests/: int_tests.rs
crates/btc_resp_aggregator/: Cargo.toml
crates/btc_resp_aggregator/src/: aggregator.rs  error.rs  lib.rs  traits.rs  tx_checker.rs
crates/btc_signer/: Cargo.toml
crates/btc_signer/src/: api.rs  config.rs  errors.rs  frost.rs  lib.rs
crates/btc_signer/tests/: int_tests.rs
crates/frost/: Cargo.toml
crates/frost/src/: aggregator.rs  config.rs  errors.rs  lib.rs  mocks.rs  signer.rs  traits.rs  types.rs  utils.rs
crates/frost/tests/: general.rs  test_flow.rs
crates/global_utils/: Cargo.toml
crates/global_utils/src/: api_result_request.rs  common_resp.rs  common_types.rs  config_path.rs  config_variant.rs  conversion.rs  env_parser.rs  http_client.rs  lib.rs  logger.rs  network.rs  tweak_generation.rs
crates/lrc20/: Cargo.toml
crates/lrc20/src/: lib.rs  marshal.rs  proto_hasher.rs  spark_hash.rs  spark_signature.rs  token_identifier.rs  token_leaf.rs  token_metadata.rs  token_transaction.rs  token_transfer.rs
crates/persistent_storage/: Cargo.toml  Makefile  example.env
crates/persistent_storage/infrastructure/: docker-compose.yml
crates/persistent_storage/migrations/: 20250814104651_initial.down.sql
crates/persistent_storage/src/: config.rs  error.rs  init.rs  lib.rs
crates/persistent_storage/tests/: btc_indexer_requests.rs  init_tests.rs  user_requests_tests.rs
crates/proto-hasher/: Cargo.toml
crates/proto-hasher/src/: errors.rs  google_protobuf.rs  hashing.rs  lib.rs
crates/proto-hasher/tests/: basic_test.rs  comprehensive_test.rs  cross_language_test_cases.rs  null_any_error_cases.rs
crates/spark-address/: Cargo.toml
crates/spark-address/src/: lib.rs
crates/spark-protos-rpc/: Cargo.toml  build.rs
crates/spark-protos-rpc/spark-protos/spark/: authn.proto  spark_token.proto  spark_tree.proto
crates/spark-protos-rpc/src/: lib.rs  reflect.rs  spark_protos.rs
crates/spark_client/: Cargo.toml
crates/spark_client/src/: client.rs  connection.rs  lib.rs  utils.rs
crates/spark_client/src/common/: config.rs  error.rs
crates/spark_client/src/utils/: spark_address.rs  time.rs
crates/tests/: Cargo.toml  int_tests.rs
gateway/apps/main/: Cargo.toml
gateway/apps/main/src/: main.rs
gateway/crates/coin_selecter/: Cargo.toml
gateway/crates/coin_selecter/src/: greedy.rs  lib.rs  session_tracker.rs  (+1 more)
gateway/crates/config_parser/: Cargo.toml
gateway/crates/deposit_verification/: Cargo.toml
script_executor/: Cargo.toml
script_executor/src/: error.rs
spark_balance_checker/: Cargo.toml  config.toml  example.env
spark_balance_checker/apps/main/: Cargo.toml
spark_balance_checker/crates/common/: Cargo.toml
spark_balance_checker/crates/config_parser/: Cargo.toml
spark_balance_checker/crates/server/: Cargo.toml
spark_balance_checker/crates/spark_client/: Cargo.toml
spark_balance_checker/crates/utils/: Cargo.toml
spark_balance_checker/infrastructure/: Dockerfile  config.toml  docker-compose.yml
spark_balance_checker/infrastructure/configuration/: base.toml  local.toml
spark_balance_checker/spark_indexer/: Cargo.toml
spark_balance_checker/src/: balance_checker.rs  config.rs  connection.rs  error.rs  lib.rs  server.rs  utils.rs
tests/: Cargo.toml  REGTEST-RICKY.md
tests/runes-ts/: package-lock.json  package.json
tests/runes-ts/src/: bitcoin-client.ts  etch.ts  main-etch.ts  main-mint.ts  main.ts  mint.ts  runes.ts  utils.ts
tests/src/: bitcoin_client.rs  constants.rs  error.rs  gateway_client.rs  lib.rs  rune_etching.rs  rune_manager.rs  spark_breez.rs  spark_client.rs  user_wallet.rs  utils.rs
tests/tests/: bitcoin_client.rs  etch_test.rs  flow_tests.rs  rune_manager_test.rs  runes_transfer.rs  spark_test.rs  spark_test_testnet4.rs
tests/tests/common/: bitcoin_client.rs  constants.rs  error.rs  gateway_client.rs  mod.rs  rune_etching.rs  rune_manager.rs  spark_breez.rs  spark_client.rs  user_wallet.rs  utils.rs
(+482 files in other folders)
