[workspace]
resolver = "3"
members = [
    "crates/*",
]

[workspace.package]
version = "0.1.0"
rust-version = "1.89.0"
authors = ["DistributedLabs"]
readme = "Readme.md"

[workspace.dependencies]
tracing = { version = "0.1.41", features = [] }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }

secp256k1 = { version = "0.28", features = ["rand", "std", "serde"] }
rand = "0.8"

thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
bincode = "1.3"

frost-secp256k1 = "2.1.0"

frost-secp256k1-tr = "2.2.0"
async-trait = "0.1.89"
rand_core = {version = "0.6.4", features = ["getrandom"]}

proptest = "1.7.0"
futures = "0.3.31"

serde_json = "1.0.143"
uuid = { version = "1.0", features = ["v4"] }

frost = { path = "crates/frost" }