[workspace]
resolver = "3"
members = [
    # global
    "crates/*",
    # verifier
    "verifier/crates/*",
    "verifier/apps/*",
    # gateway
    "gateway/crates/*",
    "gateway/apps/*",
    # spark-balance-checker
    "spark_balance_checker/crates/*",
    "spark_balance_checker/apps/*",
    # btc indexer
    "btc_indexer/apps/*",
    "btc_indexer/crates/*",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
authors = ["DistributedLabs"]
readme = "Readme.md"

[workspace.dependencies]
####### Global Dependencies #######
anyhow = { version = "1.0.98" }
async-trait = { version = "0.1.88" }
axum = { version = "0.8.4", features = ["macros"] }
axum-test = { version = "18.0.0" }
bech32 = "0.11.0"
bitcoin = { version = "0.32.7", features = ["serde", "rand-std", "rand"] }
bitcoincore-rpc = { version = "0.19.0" }
chrono = { version = "0.4.41" }
config = { version = "0.15.13" }
dns-lookup = { version = "3.0.0" }
dotenv = { version = "0.15.0" }
env_logger = "0.11.8"
eyre = { version = "0.6.12" }
frost-secp256k1-tr = { version = "2.2.0" }
futures = { version = "0.3.31" }
hex = "0.4.3"
http = "1.3.1"
lazy_static = "1.5.0"
log = { version = "0.4.27" }
mockall = { version = "0.13.1" }
once_cell = { version = "1.21.3" }
ordinals = { version = "0.0.15" }
prost = "0.13.5"
prost-reflect = "0.16.1"
prost-wkt = "0.6.1"
prost-wkt-build = "0.6.1"
prost-wkt-types = "0.6.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.143", features = ["raw_value"] }
sqlx = { version = "0.8.6", features = ["json", "runtime-tokio", "postgres", "chrono", "json", "derive", "uuid", "macros"] }
strum = { version = "0.27", features = ["derive"] }
thiserror = { version = "2.0.16" }
titan-client = { version = "0.1.43" }
titan-types = { version = "0.1.28" }
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = { version = "0.7.16" }
tokio-test = "0.4"
toml = { version = "0.9.5" }
tonic = { version = "0.12.3", features = ["tls-native-roots"] }
tonic-build = { version = "0.12.3", features = ["prost"] }
tracing = { version = "0.1.41", features = [] }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.6", features = ["serde"] }
utoipa = { version = "5.4.0" }
utoipa-swagger-ui = { version = "9.0.2" }
uuid = { version = "1.18.0", features = ["serde", "v4"] }


####### Global Crates #######
global_utils = { path = "./crates/global_utils" }
spark-protos = { path = "./crates/spark-protos-rpc" }
spark_client = { path = "./crates/spark_client" }
persistent_storage = { path = "./crates/persistent_storage" }
frost = { path = "./crates/frost" }
lrc20 = { path = "./crates/lrc20" }
proto-hasher = { path = "./crates/proto-hasher" }


####### Verifier #######
# Verifier crates
verifier_local_db_store = { path = "./verifier/crates/local_db_store" }
verifier_server = { path = "./verifier/crates/server" }
verifier_config_parser = { path = "./verifier/crates/config_parser" }
verifier_spark_balance_checker_client = { path = "./verifier/crates/spark_balance_checker_client" }
verifier_btc_indexer_client = { path = "./verifier/crates/btc_indexer_client" }
verifier_gateway_client = { path = "./verifier/crates/gateway_client" }

# Verifier apps
verifier_main = { path = "verifier/apps/main" }


####### Gateway #######
# Gateway crates
sha3 = { version = "0.10.8" }
gateway_config_parser = { path = "gateway/crates/config_parser" }
gateway_flow_processor = { path = "gateway/crates/flow_processor" }
gateway_local_db_store = { path = "gateway/crates/local_db_store" }
gateway_server = { path = "gateway/crates/server" }
gateway_spark_service = { path = "gateway/crates/spark_service" }
gateway_deposit_verification = { path = "gateway/crates/deposit_verification" }
gateway_verifier_client = { path = "gateway/crates/verifier-client" }

# Gateway apps
gateway_main = { path = "gateway/apps/main" }


####### Spark Balance Checker #######
# Spark balance checker crates
spark_balance_checker_config_parser = { path = "./spark_balance_checker/crates/config_parser" }
spark_balance_checker_server = { path = "./spark_balance_checker/crates/server" }

# Spark balance checker apps
spark_balance_checker_main = { path = "./spark_balance_checker/apps/main" }


####### Btc Indexer #######
# Btc indexer crates
btc_indexer = { path = "./btc_indexer/crates/btc_indexer" }
btc_indexer_api = { path = "./btc_indexer/crates/api" }
btc_indexer_internals = { path = "./btc_indexer/crates/indexer_internals" }
btc_indexer_server = { path = "./btc_indexer/crates/server", features = ["swagger"] }
config_parser = { path = "./btc_indexer/crates/config_parser" }
local_db_store_indexer = { path = "./btc_indexer/crates/local_db_store" }

# Btc indexer apps
btc_indexer_main = { path = "./btc_indexer/apps/main" }
