[workspace]
resolver = "3"
members = [
    # global
    "crates/*",
    # verifier
    "verifier/crates/*",
    "verifier/apps/*",
    # gateway
    "gateway/crates/*",
    "gateway/apps/*",
    # spark-balance-checker
    "spark_balance_checker/crates/*",
    "spark_balance_checker/apps/*",
    # btc indexer
    "btc_indexer/apps/*",
    "btc_indexer/crates/*",

    # tests
    "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"
authors = ["DistributedLabs"]
readme = "Readme.md"

[workspace.dependencies]
####### Global Dependencies #######
async-trait = { version = "0.1.88" }
axum = { version = "0.8.4", features = ["macros"] }
axum-test = { version = "18.0.0" }
bech32 = "0.11.0"
bitcoin = { version = "0.32.7", features = ["serde", "rand-std", "rand"] }
bitcoincore-rpc = { version = "0.19.0" }
chrono = { version = "0.4.41", features = ["serde"] }
config = { version = "0.15.13" }
dns-lookup = { version = "3.0.0" }
dotenvy = { version = "0.15.7" }
eyre = { version = "0.6.12" }
frost-secp256k1-tr = { version = "2.2.0" }
futures = { version = "0.3.31" }
hex = "0.4.3"
http = "1.3.1"
lazy_static = "1.5.0"
mockall = { version = "0.13.1" }
once_cell = { version = "1.21.3" }
ord = { version = "0.23.3" }
ord-rs = { version = "0.3.0", features = ["rune"] }
ordinals = { version = "0.0.15" }
prost = "0.13.5"
prost-reflect = { version = "0.16.1", features = ["serde"] }
prost-wkt = "0.6.1"
prost-wkt-build = "0.6.1"
prost-wkt-types = "0.6.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.143", features = ["raw_value"] }
serde_str = { version = "0.1" }
sqlx = { version = "0.8.6", features = ["json", "runtime-tokio", "postgres", "chrono", "json", "derive", "uuid", "macros"] }
strum = { version = "0.27", features = ["derive"] }
thiserror = { version = "2.0.16" }
titan-client = { version = "0.1.43" }
titan-types = { version = "0.1.28" }
tokio = { version = "1.45.0", features = ["full"] }
tokio-test = "0.4"
tokio-util = { version = "0.7.16" , features = ["rt"]}
toml = { version = "0.9.5" }
tonic = { version = "0.12.3", features = ["tls-native-roots"] }
tonic-build = { version = "0.12.3", features = ["prost"] }
tonic-health = { version = "0.12.3"}
tracing = { version = "0.1.41", features = [] }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.6", features = ["serde"] }
utoipa = { version = "5.4.0" }
utoipa-swagger-ui = { version = "9.0.2" }
uuid = { version = "1.18.0", features = ["serde", "v4", "v7"] }
enum_dispatch = { version="0.3" }
rustls = { version = "0.23.32", default-features = false, features = ["ring"] }


####### Global Crates #######
global_utils = { path = "./crates/global_utils" }
spark-protos = { path = "./crates/spark-protos-rpc" }
spark_client = { path = "./crates/spark_client" }
persistent_storage = { path = "./crates/persistent_storage" }
frost = { path = "./crates/frost" }
lrc20 = { path = "./crates/lrc20" }
proto-hasher = { path = "./crates/proto-hasher" }
token-identifier = { path = "./crates/token-identifier" }
spark-address = { path = "./crates/spark-address" }
spark-invoice = { path = "./crates/spark-invoice" }


####### Verifier #######
# Verifier crates
verifier_local_db_store = { path = "./verifier/crates/local_db_store" }
verifier_server = { path = "./verifier/crates/server" }
verifier_config_parser = { path = "./verifier/crates/config_parser" }
verifier_spark_balance_checker_client = { path = "./verifier/crates/spark_balance_checker_client" }
verifier_btc_indexer_client = { path = "./verifier/crates/btc_indexer_client" }
verifier_gateway_client = { path = "./verifier/crates/gateway_client" }

# Verifier apps
verifier_main = { path = "verifier/apps/main" }


####### Gateway #######
# Gateway crates
gateway_config_parser = { path = "gateway/crates/config_parser" }
gateway_deposit_verification = { path = "gateway/crates/deposit_verification" }
gateway_dkg_pregen = { path = "gateway/crates/dkg_pregen" }
gateway_flow_processor = { path = "gateway/crates/flow_processor" }
gateway_local_db_store = { path = "gateway/crates/local_db_store" }
gateway_rune_transfer = { path = "gateway/crates/rune_transfer" }
gateway_server = { path = "gateway/crates/server" }
gateway_spark_service = { path = "gateway/crates/spark_service" }
gateway_verifier_client = { path = "gateway/crates/verifier-client" }

# Gateway apps
gateway_main = { path = "gateway/apps/main" }


####### Spark Balance Checker #######
# Spark balance checker crates
spark_balance_checker_config_parser = { path = "./spark_balance_checker/crates/config_parser" }
spark_balance_checker_server = { path = "./spark_balance_checker/crates/server" }

# Spark balance checker apps
spark_balance_checker_main = { path = "./spark_balance_checker/apps/main" }


####### Btc Indexer #######
# Btc indexer crates
btc_indexer_server = { path = "./btc_indexer/crates/server" }
btc_indexer_client = { path = "./btc_indexer/crates/indexer_client" }
btc_indexer = { path = "./btc_indexer/crates/indexer" }
btc_indexer_local_db_store = { path = "./btc_indexer/crates/local_db_store" }
btc_indexer_config = { path = "./btc_indexer/crates/config" }

# Btc indexer apps
btc_indexer_main = { path = "./btc_indexer/apps/main" }

####### Tests #######
tests = { path = "./tests" }
