[package]
name = "spark-indexer"
edition = "2024"

[lib]
name = "spark_indexer"

[[bin]]
name = "main"

[dependencies]
spark-protos = { workspace = true }
tonic = { version = "0.12.3", features = ["tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.5"
eyre = "0.6.2"
tokio = { version = "1.47.1", features = ["full"] }
env_logger = "0.11.8"
log = "0.4.27"
bech32 = "0.11.0"
hex = "0.4.3"
axum = "0.8.4"
thiserror = "2.0.15"
http = "1.3.1"
