[package]
name = "tests"
edition = "2024"

[dependencies]
bitcoin = { workspace = true }
ordinals = { workspace = true }
bitcoincore-rpc = { workspace = true }
thiserror = { workspace = true }
titan-client = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
ord = { workspace = true }
rand_core = { workspace = true }
tracing = { workspace = true }
global_utils = { workspace = true }
serde_json = "1.0.143"
