[package]
name = "tests"
edition = "2024"

[dependencies]
bitcoin = { workspace = true }
bitcoincore-rpc = { workspace = true }
chrono = { workspace = true }
global_utils = { workspace = true }
dotenvy = {workspace = true}
hex = { workspace = true }
lazy_static = { workspace = true }
lrc20 = { workspace = true }
ord = { workspace = true }
ord-rs = { workspace = true }
ordinals = { workspace = true }
proto-hasher = { workspace = true }
rand_core = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
spark-address = { workspace = true }
spark-protos = { workspace = true }
thiserror = { workspace = true }
titan-client = { workspace = true }
token-identifier = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
