[package]
name = "server_helper"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "spark-helper"
path = "src/bin/main.rs"

[dependencies]
tokio.workspace = true
actix-web.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
tracing-actix-web.workspace = true
global_utils.workspace = true
serde_json.workspace = true
config_parser.workspace = true
utoipa = { version = "4.2.3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }
serde = { version = "1.0.219", features = ["derive"] }
script_executor.workspace = true