[package]
name = "btc-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
secp256k1 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
config = { workspace = true }

btc-signer-types = { path = "../btc_signer_types" }
btc-signer = { path = "../btc_signer" }

[lib]
name = "btc_aggregator"
path = "src/lib.rs"