[package]
name = "btc-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
secp256k1 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

btc-signer = { path = "../btc_signer" }
frost-secp256k1 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }


