[package]
name = "btc-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
secp256k1 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

btc-signer = { path = "../btc_signer" }
frost-secp256k1 = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
proptest = { workspace = true }
async-trait = "0.1.89"
frost-secp256k1-tr = "2.2.0"
reqwest = "0.12.23"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }


