[package]
name = "btc-signer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
secp256k1 = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
bincode = { workspace = true }
frost-secp256k1 = { workspace = true }
rand_core = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

