[package]
name = "frost"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bitcoin = { workspace = true }
eyre = { workspace = true }
frost-secp256k1-tr = { workspace = true }
futures = { workspace = true }
global_utils = { workspace = true }
persistent_storage = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
spark-protos = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }