[package]
name = "lrc20"
description = "LRC20 types for Spark"
edition = "2024"

[dependencies]
bitcoin = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
spark-protos = { workspace = true }
prost-wkt-types = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
proto-hasher = { workspace = true }
token-identifier = { workspace = true }
uuid = { workspace = true }
spark-address = { workspace = true }

[dev-dependencies]
once_cell = { workspace = true }
