[package]
name = "persistent_storage"
edition = "2024"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
async-trait = { workspace = true }
global_utils = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
dotenvy = { workspace = true }
eyre = { workspace = true }
global_utils = { workspace = true }
tokio = { workspace = true }
