[package]
name = "spark-address"
edition = "2024"

[dependencies]
bech32 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
spark-invoice = { workspace = true }

[features]
default = ["std"]
std = []

[dev-dependencies]
proptest = "1.4"
rand = "0.9.1"
lazy_static = "1.5.0"
chrono = { workspace = true }
token-identifier = { workspace = true }
uuid = { workspace = true }
bitcoin = { workspace = true }
