[package]
name = "spark-protos"
version = "0.1.12"
edition = "2024"

[package.metadata.cargo-machete]
ignored = ["prost-wkt", "prost-wkt-types", "serde", "tonic"]

[features]
default = ["client"]
client = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tonic = "0.12.3"
prost = "0.13.5"
prost-wkt-types = "0.6.1"
prost-wkt = "0.6.1"

[build-dependencies]
prost-wkt-build = "0.6.1"
tonic-build = { version = "0.12.3", features = ["prost"] }
