[package]
name = "spark_client"
edition = { workspace = true }

[dependencies]
bech32 = { workspace = true }
env_logger = { workspace = true }
global_utils = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
spark-protos = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }