[package]
name = "spark_client"
edition = { workspace = true }

[dependencies]
bech32 = { workspace = true }
env_logger = { workspace = true }
global_utils = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
spark-protos = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
bitcoin = { workspace = true }
lrc20 = { workspace = true }
chrono = { workspace = true }
eyre = { workspace = true }
spark-address = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }