[package]
name = "btc-verifier-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
btc-signer = { path = "../btc_signer" }
btc-aggregator = { path = "../btc_aggregator" }
tokio = { workspace = true, features = ["test-util"] }
tracing-test = "0.2"
secp256k1 = "0.28.2"
uuid = { version = "1.18.0", features = ["v4"] }
rand = "0.8.5"

[[test]]
name = "integration_tests"
path = "int_tests.rs"