[package]
name = "btc_indexer_main"
edition = "2024"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
anyhow = { workspace = true }
global_utils = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
dotenv = { workspace = true }
config_parser = { workspace = true }
persistent_storage = { workspace = true }
btc_indexer_server = { workspace = true }
btc_indexer_internals = { workspace = true }