[package]
name = "btc_indexer_main"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
btc_indexer_server = { workspace = true }
btc_indexer_config = { workspace = true }
dotenvy = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
global_utils = { workspace = true }
btc_indexer_local_db_store = { workspace = true }
axum = { workspace = true }
btc_indexer = { workspace = true }
btc_indexer_client = { workspace = true }
tokio-util = { workspace = true }
