[package]
name = "btc_indexer_api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
axum = { workspace = true }
global_utils = { workspace = true }
bitcoin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
titan-client = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
sqlx = { workspace = true }
