[package]
name = "local_db_store_indexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
async-trait = { workspace = true }
bitcoin = { workspace = true }
btc_indexer_api = { workspace = true }
eyre = { workspace = true }
global_utils = { workspace = true }
ordinals = { workspace = true }
persistent_storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
titan-client = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
bitcoin = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true }
