[package]
name = "btc_indexer_server"
edition = "2024"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true

[features]
default = []
swagger = []

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
persistent_storage = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config_parser = { workspace = true }
btc_indexer_internals = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
bitcoin = { workspace = true }
serde_json = { workspace = true }
titan-client = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true}

[dev-dependencies]
anyhow = { workspace = true }
dotenv = { workspace = true }
global_utils = { workspace = true }
axum-test = { workspace = true }
titan-types = {workspace = true}
mockall = {workspace = true}
async-trait = {workspace = true}
bitcoincore-rpc = {workspace = true}