[package]
name = "gateway_main"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
bitcoin = { workspace = true }
dotenv = { workspace = true }
gateway_config_parser = { workspace = true }
gateway_server = { workspace = true }
global_utils = { workspace = true }
persistent_storage = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
gateway_flow_processor = { workspace = true }
frost = { workspace = true }
gateway_utils = { workspace = true }
gateway_local_db_store = { workspace = true }
